<resources>
	<string name="global_preferences_title">Global Preferences</string>
	<string name="session_preferences_title">Session Preferences</string>
	<string name="first_run_title">First time?</string>
	<string name="first_run_info">A gentle reminder.. there is help available through the menus :)</string>
	<string name="warn_on_small_display_title">Display Warning</string>
	<string name="warn_on_small_display_info">Brain Learnin\' Kanji is best used on displays with a height of at least 800 pixels (such as WVGA). Your experience may be a little less than happy :(.</string>
	<string name="OK">OK</string>
	<string name="Cancel">Cancel</string>
	<string name="err_title">Error</string>
	<string name="success">Success</string>
	<string name="location">Location</string>
    <string name="hello">Welcome to Brain Learnin\'</string>
    <string name="app_name">Kanji Brain Learnin\'</string>
	<string name="button_kanji_front_door_text">Kanji</string>
	<string name="button_vocabulary_front_door_text">Vocabulary</string>
	<string name="kanji_front_door_title">Brain Learnin\' Kanji Front Door</string>
	<string name="front_door_no_last_title">No Sessions</string>
	<string name="front_door_no_last_message">No sessions have been started yet. Select \"New Session\".</string>
	<string name="menu_sync">Sync with Google</string>
	<string name="menu_about">About</string>
	<string name="menu_help">Help</string>
	<string name="menu_session_preferences">Session Preferences</string>
	<string name="menu_grading_stats">Grading Stats</string>
	<string name="menu_num_leitners">Num Pending Info</string>
	<string name="button_front_door_text_new_session">New Session</string>
	<string name="button_front_door_text_open_session">Open Session</string>
	<string name="button_front_door_text_last_session">Last Session</string>
	<string name="button_front_door_text_about">About</string>
	<string name="no_sessions_to_open">No sessions to open</string>
	<string name="new_session_title">New Session</string>
	<string name="textview_empty_new_session_import">No items to choose from :(</string>
	<string name="button_new_session_import">Import New</string>
	<string name="button_new_session_open_selected">Open Selected</string>
	<string name="delete_template_missing">Selected template can not be deleted</string>
	<string name="delete_template_conf_title">Delete Template?</string>
	<string name="delete_template_confirm">Are you sure you want to delete template:</string>
	<string name="import_template_title">Import New Template</string>
	<string name="no_path">No File Selected</string>
	<string name="button_import_template_browse">Browse to File</string>
	<string name="button_import_template_import">Import Selected</string>
	<string name="button_import_template_export_sample">Export Sample</string>
	<string name="import_template_no_file">No file selected</string>
	<string name="import_template_template_err">Error opening template</string>
	<string name="import_template_template_no_title">No TemplateName in template xml</string>
	<string name="import_template_manifest_open_err">Couldn\'t open user manifest!</string>
	<string name="import_template_manifest_duplicate_err">We already have a template with the same name!</string>
	<string name="import_sample_template_template_err">Couldn\'t import template for some reason :(</string>
	<string name="import_sample_template_manifest_write_err">There was a catastrophic error writing the user manifest!</string>
	<string name="menu_rename_template">Rename Template</string>
	<string name="menu_delete_template">Delete Template</string>
	<string name="rename_template_duplicate_err">There\'s already a template with the same name</string>
	<string name="rename_template_cant_rename">Unable to rename selected template</string>
	<string name="name_new_session_label">Enter new session name</string>
	<string name="load_template_browser_title">Select Template File To Import</string>
	<string name="load_template_browser_dir_err">Unable to open folder</string>
	<string name="select_directory_browser_title">Select Directory</string>
	<string name="button_select_directory_select">Select Directory</string>
	<string name="button_select_directory_cancel">Cancel</string>
	<string name="export_sample_template_template_err">Error exporting sample template</string>
	<string name="export_sample_template_template_success">Successfully wrote out sample template</string>
	<string name="rename_template_type_here_label">Enter new template name:</string>
	<string name="rename_session_type_here_label">Enter new session name:</string>
	<string name="open_session_title">Open Session</string>
	<string name="menu_rename_session">Rename Session</string>
	<string name="menu_delete_session">Delete Session</string>
	<string name="delete_session_conf_title">Delete Session?</string>
	<string name="delete_session_confirm">Are you sure you want to delete session:</string>
	<string name="delete_session_err_title">Fatal error!</string>
	<string name="delete_session_err">Fatal error trying to delete session.. very, very super bad.</string>
	<string name="delete_session_file_err_title">Fatal error!</string>
	<string name="delete_session_file_err">Fatal error trying to delete session file.. super bad.</string>
	<string name="session_opened_title">Session Opened</string>
	<string name="session_opened_flashcard_button">Flashcard</string>
	<string name="session_opened_on_button">オン</string>
	<string name="session_opened_kun_button">くん</string>
	<string name="session_opened_onkun_button">オン &amp; くん</string>
	<string name="session_opened_meanings_button">Meanings</string>
	<string name="session_opened_grading_check">Enable Grading</string>
	<string name="session_opened_quick_quiz_check">Quick Quiz</string>
	<string name="session_opened_wait_message">Opening quiz.. Please wait..</string>
	<string name="import_quiz_err_title">Quiz Import Error</string>
	<string name="import_quiz_err_message">A fatal error occurred when importing quiz session!</string>
	<string name="select_kanji_title_base">Select kanji for</string>
	<string name="select_kanji_title_flashcard">flashcard set</string>
	<string name="select_kanji_title_test">test set</string>
	<string name="select_kanji_prev_button">Prev</string>
	<string name="select_kanji_next_button">Next</string>
	<string name="select_kanji_clear_button">Clear All</string>
	<string name="select_kanji_all_button">Select All</string>
	<string name="menu_edit_kanji">Edit Kanji</string>
	<string name="menu_edit_selected_kanji">Edit Selected Kanji</string>
	<string name="menu_add_kanji">Add New Kanji</string>
	<string name="menu_delete_selected_kanji">Delete Selected Kanji</string>
	<string name="delete_glyph_confirm">Actually delete glyph:</string>
	<string name="selectEditKanji">Select Kanji to Edit</string>
	<string name="selectEditKanji_correct_title">List of Correctly Answered Kanji</string>
	<string name="edit_kanji_edit_button">Edit Kanji</string>
	<string name="editKanjiTitle">Edit Kanji</string>
	<string name="editNewKanjiTitle">Edit New Kanji</string>
	<string name="button_edit_kanji_update">Update Kanji</string>
	<string name="button_edit_kanji_add">Add Kanji</string>
	<string name="edit_kanji_kanji_title">Kanji:</string>
	<string name="edit_kanji_on_title">オン Readings:</string>
	<string name="edit_kanji_kun_title">くん Readings:</string>
	<string name="edit_kanji_meanings_title">Meanings:</string>
	<string name="editLeitnerTitle">Edit Leitner Levels</string>
	<string name="edit_leitner_append_button">Append</string>
	<string name="edit_leitner_edit_button">Edit</string>
	<string name="edit_leitner_delete_button">Delete</string>
	<string name="edit_leitner_label">Edit Leitner Level:</string>
	<string name="flashCardTitle">Flashcards</string>
	<string name="kanji_flash_next_button">Next Kanji</string>
	<string name="kanji_flash_flip_button">Flip Card</string>
	<string name="mainQuizTitle">Quiz</string>
	<string name="main_quiz_fail_button">Fail</string>
	<string name="main_quiz_verity_button">Verify</string>
	<string name="main_quiz_cheat_button">Pass</string>
	<string name="main_quiz_on_text">オン</string>
	<string name="main_quiz_kun_text">くん</string>
	<string name="main_quiz_meanings_text">Meanings</string>
	<string name="main_quiz_no_entries_title">No entries in test</string>
	<string name="main_quiz_no_entries_message">No entries in test. Open up the quiz preferences and add some entries to the quiz test set.</string>
	<string name="scoringTitle">Quiz Scoring</string>
	<string name="button_show_grading_stats">Show Grading Statistics</string>
	<string name="button_show_correct_kanji_answered">Show Correctly Answered Kanji</string>
	<string name="button_show_incorrect_kanji_answered">Show Incorrectly Answered Kanji</string>
	<string name="label_num_due_questions_not_asked">Number of due questions not asked:</string>
	<string name="label_num_all_correct">Number answered correctly:</string>
	<string name="label_num_first_answer_correct">Number initially answered correctly:</string>
	<string name="label_num_incorrect_answer">Number incorrectly answered:</string>
	<string name="grading_stats_title">Grading Stats</string>
	<string name="incorrect_answer_list_title">Incorrectly Answered Kanji</string>
	<string name="incorrect_answer_mark_correct_button">Mark Correct</string>
	<string name="num_leitner_list_title">Number Due Questions</string>
	<string name="label_num_due_on_questions_test_list">Num Due オン in Test List:</string>
	<string name="label_num_due_kun_questions_test_list">Num Due くん in Test List:</string>
	<string name="label_num_due_meanings_questions_test_list">Num Due Meanings in Test List:</string>
	<string name="pref_maxEntriesPerSession_title">Max Entries per Session</string>
	<string name="pref_maxEntriesPerSession_summary">Maximum number of entries in a quiz session</string>
	<string name="pref_minQuestionLocality_title">Min Question Locality</string>
	<string name="pref_minQuestionLocality_summary">If possible, answer this number of questions before repeating</string>
	<string name="pref_maxQuestionLocality_title">Max Question Locality</string>
	<string name="pref_maxQuestionLocality_summary">If possible, answer at most this number of questions before repeating</string>
	<string name="pref_numTimesToRepeatCorrectUntilAccepted_title">Num Times To Repeat</string>
	<string name="pref_numTimesToRepeatCorrectUntilAccepted_summary">Correctly answer questions this many times before accepting it</string>
	<string name="pref_doRealLeitner_title">Drop All Levels</string>
	<string name="pref_doRealLeitner_summary">When question is answered incorrectly, drop back to level 0 (or just one level if false)</string>
	<string name="pref_showWordCycle_title">Show Word Cycle Count</string>
	<string name="pref_showWordCycle_summary">Show or hide the word cycle count during quiz</string>
	<string name="pref_resetCorrectCountOnWrongAnswer_title">Reset Correct Count</string>
	<string name="pref_resetCorrectCountOnWrongAnswer_summary">Should the correct answer count be reset on incorrect answer (or decremented by one, depending on Drop All Levels)</string>
	<string name="pref_doRandomFlashcardMode_title">Random Flashcard Mode</string>
	<string name="pref_doRandomFlashcardMode_summary">If true, flashcard mode will run in random. Otherwise it\'ll be sequential.</string>
	<string name="pref_testKanji_title">Test Kanji</string>
	<string name="pref_testKanji_summary">Select kanji for test set</string>
	<string name="pref_flashcardKanji_title">Flashcard Kanji</string>
	<string name="pref_flashcardKanji_summary">Select kanji for flashcard learning set</string>
	<string name="pref_editKanji_title">Edit Kanji</string>
	<string name="pref_editKanji_summary">Edit kanji in session</string>
	<string name="pref_levels_title">Adjust Levels</string>
	<string name="pref_levels_summary">Adjust Leitner grading timeouts</string>
</resources>