<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" android:layout_height="wrap_content"
	android:orientation="vertical">

	<ScrollView android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@id/top_control_bar"
		android:layout_above="@id/bottom_control_bar">

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:gravity="center_horizontal">
			
			<ProgressBar android:layout_width="fill_parent"
				android:layout_height="wrap_content" style="?android:attr/progressBarStyleHorizontal"
				android:id="@+id/main_quiz_progressbar"
				android:layout_marginTop="4dip"				
				/>

			<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="horizontal" android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<TextView android:id="@+id/main_quiz_word_text"
					android:layout_width="wrap_content" android:layout_height="wrap_content"					
					android:textColor="#fff"
					android:layout_alignParentLeft="true"
					android:layout_marginLeft="10dip"
					/>
					
				<TextView android:id="@+id/main_quiz_progress_count"
					android:layout_width="wrap_content" android:layout_height="wrap_content"					
					android:textColor="#fff"
					android:text="CNT"
					android:layout_alignParentRight="true"
					android:layout_marginRight="10dip"
					/>

			</RelativeLayout>			
			
			<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent" android:layout_height="wrap_content"				
				 >

				<TextView android:id="@+id/main_quiz_on_text"
					android:layout_width="100dip" android:layout_height="wrap_content"
					android:text="@string/main_quiz_on_text"
					android:textColor="#fff"
					android:layout_alignParentLeft="true"
					android:gravity="center"
					android:layout_marginLeft="20dip"
					android:background="#22ff0000"																							
					/>

				<TextView android:id="@+id/main_quiz_meanings_text"
					android:layout_width="100dip" android:layout_height="wrap_content"
					android:text="@string/main_quiz_meanings_text"
					android:textColor="#fff"
					android:layout_centerHorizontal="true"
					android:gravity="center"
					android:background="#2200ff00"					 					
					/>

				<TextView android:id="@+id/main_quiz_kun_text"
					android:layout_width="100dip" android:layout_height="wrap_content"
					android:text="@string/main_quiz_kun_text" 
					android:textColor="#fff"
					android:layout_alignParentRight="true"
					android:gravity="center"
					android:layout_marginRight="20dip"
					android:background="#220000ff"									
					/>

			</RelativeLayout>
			

			<TextView android:id="@+id/main_quiz_kanji_text_view"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:gravity="center_horizontal" android:textColor="#fff"
				android:textSize="50pt" android:text="ZZZ"
				android:layout_marginTop="-20dip"
				 />

			<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			>

				<Button android:id="@+id/main_quiz_fail_button"
					android:layout_width="70dip" android:layout_height="40dip"
					android:text="@string/main_quiz_fail_button" android:gravity="center"					
					android:layout_alignParentLeft="true"
					android:layout_gravity="center_vertical"
					android:layout_marginTop="15dip"
					android:layout_marginBottom="15dip"
					/>

				<Button android:id="@+id/main_quiz_verity_button"
					android:layout_width="70dip" android:layout_height="70dip"
					android:text="@string/main_quiz_verity_button" android:gravity="center"					
					android:layout_centerHorizontal="true"
					/>

				<Button android:id="@+id/main_quiz_cheat_button"
					android:layout_width="70dip" android:layout_height="40dip"
					android:text="@string/main_quiz_cheat_button" android:gravity="center"					
					android:layout_alignParentRight="true"
					android:layout_gravity="center_vertical"
					android:layout_marginTop="15dip"
					android:layout_marginBottom="15dip"
					/>

			</RelativeLayout>

			<EditText android:id="@+id/main_quiz_edit"
				android:layout_width="fill_parent" android:layout_height="wrap_content"				
				android:background="@drawable/rounded_edittext_simple"
				android:textColor="#fff"
				android:layout_marginLeft="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginTop="10dip"
				android:paddingLeft="10dip"
				android:paddingRight="10dip"
				/>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>